# swagger/spring-server/src/main/java/io/avalia/fruits/api/endpoints/RuleApiController.java
@@ -10,14 +10,20 @@ import io.avalia.fruits.entities.PointScaleEntity;
 import io.avalia.fruits.entities.RuleEntity;
 import io.avalia.fruits.repositories.ApplicationRepository;
 import io.avalia.fruits.repositories.RuleRepository;
+import io.swagger.annotations.ApiParam;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
+import org.springframework.stereotype.Controller;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestHeader;
 
 import java.util.ArrayList;
 import java.util.List;
 
 @javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2017-07-26T19:36:34.802Z")
 
+@Controller
 public class RuleApiController implements RulesApi {
 
     @Autowired
@@ -26,16 +32,16 @@ public class RuleApiController implements RulesApi {
     @Autowired
     ApplicationRepository applicationRepository;
 
-    private Tools tools;
+    private Tools tools = new Tools();
 
     @Override
-    public ResponseEntity<Object> createRule(Rule rule) {
+    public  ResponseEntity<Object> createRule(@ApiParam(value = "" ,required=true ) @RequestBody Rule rule) {
         Integer appKey = rule.getAppKey();
         RuleEntity res = ruleRepository.findRuleEntityByNameAndAppKey(rule.getName(), rule.getAppKey());
         if (res == null) {
             ApplicationEntity app = applicationRepository.findByApplicationID(appKey);
             if(app == null){
-                app = tools.createApplicaitonEntity(appKey);
+                app = tools.createApplicationEntity(appKey);
             }
 
             List<BadgeEntity> badges = app.getBagdes();
@@ -51,7 +57,7 @@ public class RuleApiController implements RulesApi {
 
             List<RuleEntity> rules = app.getRules();
             rules.add(tools.toRuleEntity(rule));
-            ruleRepository.save(res);
+            applicationRepository.save(app);
 
             return ResponseEntity.accepted().build();
         } else {
@@ -60,7 +66,7 @@ public class RuleApiController implements RulesApi {
     }
 
     @Override
-    public ResponseEntity<Object> deleteRule(Rule rule) {
+    public ResponseEntity<Object> deleteRule(@ApiParam(value = "" ,required=true ) @RequestBody Rule rule) {
         RuleEntity res = ruleRepository.findRuleEntityByNameAndAppKey(rule.getName(), rule.getAppKey());
         if (res != null) {
             ruleRepository.deleteRuleEntityByNameAndAppKey(rule.getName(), rule.getAppKey());
@@ -72,7 +78,8 @@ public class RuleApiController implements RulesApi {
     }
 
     @Override
-    public ResponseEntity<Rule> getRule(Integer appKey, String ruleName) {
+    public ResponseEntity<Rule> getRule(@ApiParam(value = "" ,required=true ) @RequestHeader(value="appKey", required=true) Integer appKey,
+                                        @ApiParam(value = "",required=true ) @PathVariable("ruleName") String ruleName) {
         RuleEntity res = ruleRepository.findRuleEntityByNameAndAppKey(ruleName, appKey);
         if (res != null) {
             return ResponseEntity.ok(tools.toRule(res));
@@ -80,7 +87,7 @@ public class RuleApiController implements RulesApi {
         return ResponseEntity.badRequest().build();
     }
 
-    public ResponseEntity<List<Rule>> getRules(Integer appKey) {
+    public ResponseEntity<List<Rule>> getRules(@ApiParam(value = "" ,required=true ) @RequestHeader(value="appKey", required=true) Integer appKey) {
         ApplicationEntity app = applicationRepository.findByApplicationID(appKey);
         if(app != null) {
             List<RuleEntity> res = app.getRules();
@@ -96,7 +103,9 @@ public class RuleApiController implements RulesApi {
     }
 
     @Override
-    public ResponseEntity<Object> updateRule(Integer appKey, String ruleName, Rule rule) {
+    public  ResponseEntity<Object> updateRule(@ApiParam(value = "" ,required=true ) @RequestHeader(value="appKey", required=true) Integer appKey,
+                                              @ApiParam(value = "",required=true ) @PathVariable("ruleName") String ruleName,
+                                              @ApiParam(value = "" ,required=true ) @RequestBody Rule rule){
         ApplicationEntity app = applicationRepository.findByApplicationID(appKey);
         if(app != null){
             List<RuleEntity> rules = app.getRules();
